Post and Get Comments function enabled. Comments Server mvp.

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
       <artifactId>google-cloud-storage</artifactId>
       <version>1.113.0</version>
     </dependency>
+
+    <!-- Data Store -->
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-datastore</artifactId>
+      <version>1.104.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
